--- a/backend/package.json
+++ b/backend/package.json
@@ -1,28 +1,15 @@
 {
-  "name": "ai-10.0-backend",
+  "name": "ai-10-0-backend",
   "version": "1.0.0",
-  "description": "Ai_10.0 ~•×RDS TEAM×•~ Multi AI Backend",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.7.7",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "telegraf": "^4.16.3"
-  },
-  "keywords": [
-    "ai",
-    "rds-team",
-    "multi-ai",
-    "chatbot"
-  ],
-  "author": "Sadin11gps & RDS TEAM",
-  "license": "MIT"
-}
-  "dependencies": {
+    "cors": "^2.8.5",
+    "axios": "^1.6.0",
+    "dotenv": "^16.3.1",
     "telegraf": "^4.16.3"
   }
+}
